--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev:full": "concurrently \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.87.1",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "concurrently": "^9.1.2",
